fix(formplayer): fix navigation button overlap and keyboard layout issues

--- a/formulus-formplayer/src/index.css
+++ b/formulus-formplayer/src/index.css
@@ -9,13 +9,14 @@ body {
 
 .swipelayout_screen {
   margin: 0;
-  padding-top: 4vh;
+  padding-top: 2vh;
   padding-left: 2%;
   padding-right: 2%;
-  padding-bottom: 0;
+  padding-bottom: 2vh;
   width: 96%;
-  height: 96vh;
-  overflow: hidden;
+  /* Remove fixed height and overflow hidden - let FormLayout handle scrolling */
+  min-height: 100%;
+  box-sizing: border-box;
 }
 
 .swipelayout_screen > div > div {
